# deepface-db

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test.db  test.http
app/: main.py
tests/: test_main.py
